# cursor-op

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  README.md  SETUP_FOR_CURSOR.md  USAGE.md  chat_demo.py  database.py  demo.py  examples.py  main.py  providers.py  pyproject.toml  remote_optimizer.py  render.yaml  requirements.txt  supabase_schema.sql  test_adaptive.py  test_context_visualization.py  test_deployment.py  test_gateway.py  test_integration.py  test_openrouter_compatibility.py  test_quick.py  test_rag_system.py  test_simple.sh  test_stress.py  trigger_requests.py
.inspector/: cursor-chat.json
context_optimizer/: __init__.py  cache.py  core.py  engine.py  shrinker.py  simhash.py  tokenizer.py  types.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/analytics/[id]/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/keys/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/observability/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: HeroCubes.tsx  HeroSphere.tsx  ReconstructionObserver.tsx  Sidebar.tsx
scripts/: benchmark.py  generate_fixtures.py
tests/: test_bm25.py  test_shrinker.py  test_simhash.py  test_tokenizer.py
