[project]
name = "context-optimizer-gateway"
version = "0.1.0"
description = "Model free context optimizer gateway for reducing LLM input tokens using FastAPI."
authors = ["Cursor Op"]
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.24.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
sentence-transformers = "^3.0.0"
tiktoken = "^0.7.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
